--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,7 +1,7 @@
-@use './menu.scss';
-@use './header.scss';
+@use "./menu.scss";
+@use "./header.scss";
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
