--- a/client/src/styles/content.scss
+++ b/client/src/styles/content.scss
@@ -1,6 +1,6 @@
-.mostRated {
-    border-radius: 2em;
-    box-shadow: 0em 0em 5em 5em white;
+.image {
+    border-radius: 2.5em;
+    box-shadow: 0em 0em 2em 1.2em white;
 }
 
 .buttonProduct:hover {
