--- a/client/src/styles/header.scss
+++ b/client/src/styles/header.scss
@@ -6,3 +6,13 @@
     color: orange;
     transition: 0.2s;
 }
+
+.headerActive {
+    color: orange;
+    transition: 0.2s;
+}
+
+.headerActive:hover {
+    color: black;
+    transition: 0.2s;
+}
