New update in cart and now doing cart page, shop page almost done, and new funcionalities with the headerLogged.

--- a/client/src/styles/header.scss
+++ b/client/src/styles/header.scss
@@ -16,3 +16,11 @@
     color: black;
     transition: 0.2s;
 }
+
+.cartButtonActive {
+    display: none;
+}
+
+.cartButtonDisable {
+  display: none;
+}
